# PCL_Perception

./: CMakeLists.txt  PCL_Perception.kdev4  README.md  config.rviz  package.xml
.kdev4/: PCL_Perception.kdev4
config/: centauro_basic.yaml
include/pcl_uca/: pcl_uca.h
launch/: gazebo_sim.launch  normal_plane.launch  perception.launch
src/: cartesian_task_node.cpp  normal_surface_node.cpp  pass_through.cpp  pcl_uca.cpp  planar_segmentation_node.cpp  return_node.cpp  statistical_removal.cpp  voxel_grid.cpp  world_connecter.cpp
srv/: SetReferenceFrame.srv  set_filter_params.srv  set_segmentation_params.srv
